syntax = "proto3";

message Transfer {
    string type = 1;    // type : msg / seat / villain
    string content = 2;     // content : 안녕
    string userId = 3;      // userID : 1234
    string nickName = 4;    // nickName : 출근하는 호돌이
    string send_at = 5;     // send_at : 20221101T105112
}